--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 058db6f
+	base = c4ecf2f
 	trimbase = 
 	parent = release/jade/genty
-	previous = 
+	previous = 058db6f
