--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.3.0-0": ["Thu Mar 23 2017", "AlexV", "asmodehn@gmail.com"]}
+{"1.3.0-0": ["Thu Mar 23 2017", "AlexV", "asmodehn@gmail.com"], "1.3.0-1": ["Thu Mar 23 2017", "AlexV", "asmodehn@gmail.com"]}
