--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1267996
+	base = a22b751
 	trimbase = 
 	parent = release/indigo/genty
-	previous = 
+	previous = 1267996
