--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d434eea
+	base = f13dff7
 	trimbase = 
 	parent = debian/indigo/genty
-	previous = 
+	previous = d434eea
